[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://levels/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/GameScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/GameScreen.gd" type="Script" id=4]
[ext_resource path="res://interface/DialogueBox.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]

resource_name = "fade"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Level" parent="." index="0" instance=ExtResource( 2 )]

[node name="DogPhoto" parent="Level/Items" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="RomanceBook" parent="Level/Items" index="1"]

_sections_unfolded = [ "Transform" ]

[node name="FriendsPhoto" parent="Level/Items" index="2"]

_sections_unfolded = [ "Transform" ]

[node name="Diary" parent="Level/Items" index="3"]

_sections_unfolded = [ "Transform" ]

[node name="Food" parent="Level/Items" index="4"]

_sections_unfolded = [ "Transform" ]

[node name="Movie" parent="Level/Items" index="5"]

_sections_unfolded = [ "Transform" ]

[node name="Interface" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GameScreen" parent="Interface" index="0" instance=ExtResource( 3 )]

script = ExtResource( 4 )

[node name="AnimationPlayer" parent="Interface/GameScreen" index="0"]

anims/fade = SubResource( 1 )

[node name="Circle" parent="Interface/GameScreen" index="1"]

position = Vector2( 24, 24 )

[node name="ColorRect" type="ColorRect" parent="Interface/GameScreen" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.0
margin_bottom = -3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0 )

[node name="DialogueBox" parent="Interface/GameScreen/DialogueContainer" index="0" instance=ExtResource( 5 )]

editor/display_folded = true
margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "Ladies and Gentlemen, the planet Earth is in an unmeasurable danger, our heroes are trying as hard as they can to delay its immediate destruction, but the doom is unavoidable.", "We must leave planet Earth as soon as possible. You have until the sunset to bring only what you find most important, only what is really meaningful, to your new home", "Now, go, and remember: come back before the sunset and wait for the rocket to launch" )

[node name="Dog" parent="Interface/GameScreen/DialogueContainer" index="1" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "A photo of me with Sampson...unfortunately I can\'t bring you with me buddy. I\'ll miss you, no home is complete without you." )

[node name="Book" parent="Interface/GameScreen/DialogueContainer" index="2" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "My favorite book...a romance about meeting new different cultures...", "Funny because I\'ve never met all Earth\'s culture...not even my own... Now I may meet a lot of different cultures in this new...hmm...place\?" )

[node name="Photo" parent="Interface/GameScreen/DialogueContainer" index="3" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "Ohh I found it! A photo with my friends, maybe I meet them there, I hope they are there already, the Earth is ruining already. " )

[node name="Diary" parent="Interface/GameScreen/DialogueContainer" index="4" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "Ohh I can\'t lose this, my Diary! My notes about 5 years are all here...", "Even some notes about...ohh never mind this day haha" )

[node name="Food" parent="Interface/GameScreen/DialogueContainer" index="5" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "Ohh yeah, the ingredients to make my favorite meal! I must bring it with me, no place is home without favorite food." )

[node name="Movie" parent="Interface/GameScreen/DialogueContainer" index="6" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "Hmm\? This movie...oh...so many memories...I dunno if we will have cinemas in this new home but is better to bring this with me" )

[node name="Nothing" parent="Interface/GameScreen/DialogueContainer" index="7" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "I...I can\'t go...my home is here! Everything I love, every memory I have...", "Maybe even the persons I love...everything is here, I don\'t need a home other than this one, sorry..." )

[node name="Rocket" parent="Interface/GameScreen/DialogueContainer" index="8" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "You leave Earth...your home planet and a new life waits for you...", "If you were to leave where you always lived, your home, what would you take with you to feel...in home\?" )

[node name="Lose" parent="Interface/GameScreen/DialogueContainer" index="9" instance=ExtResource( 5 )]

margin_left = -40.0
margin_top = -40.0
margin_right = -40.0
margin_bottom = -40.0
rect_scale = Vector2( 0, 0 )
dialogues = PoolStringArray( "You lost the last rocket to the new home planet...unfortunately Earth is nomore, everything is over...no home no nothing." )

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[connection signal="tree_exited" from="Level/Items/DogPhoto" to="Interface/GameScreen" method="_on_DogPhoto_tree_exited"]

[connection signal="tree_exited" from="Level/Items/RomanceBook" to="Interface/GameScreen" method="_on_RomanceBook_tree_exited"]

[connection signal="tree_exited" from="Level/Items/FriendsPhoto" to="Interface/GameScreen" method="_on_FriendsPhoto_tree_exited"]

[connection signal="tree_exited" from="Level/Items/Diary" to="Interface/GameScreen" method="_on_Diary_tree_exited"]

[connection signal="tree_exited" from="Level/Items/Food" to="Interface/GameScreen" method="_on_Food_tree_exited"]

[connection signal="tree_exited" from="Level/Items/Movie" to="Interface/GameScreen" method="_on_Movie_tree_exited"]

[connection signal="animation_finished" from="Interface/GameScreen/AnimationPlayer" to="." method="_on_Time_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


[editable path="Level"]
[editable path="Interface/GameScreen"]
[editable path="Interface/GameScreen/DialogueContainer/DialogueBox"]
